--- a/css/main.css
+++ b/css/main.css
@@ -49,3 +49,27 @@ p {
 img {
   width: 100%;
 }
+
+/*NAVIGATION*/
+
+.navigation .flex {
+  justify-content: space-between;
+}
+
+.navigation .container i {
+  color: var(--primary-color);
+}
+
+.navigation .container nav a {
+  padding: 10px 0;
+  margin: 0 20px;
+  text-transform: uppercase;
+}
+
+.navigation .container nav a:hover {
+  border-bottom: 2px solid var(--secondary-color);
+}
+
+.navigation nav ul {
+  display: flex;
+}
