home page responsivnes

--- a/css/main.css
+++ b/css/main.css
@@ -74,6 +74,28 @@ img {
   display: flex;
 }
 
+.navigation .menu-btn {
+  display: none;
+  cursor: pointer;
+}
+
+.mobile-nav {
+  display: none;
+  text-align: center;
+}
+
+.mobile-nav nav li {
+  padding-bottom: 5px;
+}
+
+.mobile-nav nav a {
+  font-size: 20px;
+}
+
+.open {
+  display: block;
+}
+
 /*SHOWCASE*/
 
 .showcase {
@@ -113,4 +135,58 @@ img {
   border-top-left-radius: 30px;
   border-bottom-left-radius: 30px;
   border-bottom-right-radius: 30px;
+}
+
+@media (max-width: 768px) {
+  .grid,
+  .about .grid {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+  }
+
+  .navigation .container .btn {
+    display: none;
+  }
+
+  .navigation .container nav {
+    display: none;
+  }
+
+  .navigation .menu-btn {
+    display: block;
+  }
+
+  .navigation .container,
+  .mobile-nav .container {
+    padding: 0 15px;
+  }
+
+  .showcase {
+    margin: 0 10px;
+  }
+
+  .showcase .flex {
+    justify-content: center;
+  }
+
+  .showcase .container .showcase-text {
+    width: 100%;
+    color: #fff;
+    text-align: center;
+  }
+
+  .showcase .container .showcase-text h1 {
+    font-size: 24px;
+  }
+
+  .about .container {
+    padding: 0 10px;
+  }
+}
+
+/* Mobile */
+@media (max-width: 500px) {
+  .showcase .container .showcase-text h1 {
+    font-size: 20px;
+  }
 }
