--- a/css/main.css
+++ b/css/main.css
@@ -135,3 +135,28 @@ img {
   border-bottom-left-radius: 30px;
   border-bottom-right-radius: 30px;
 }
+
+/*Footer*/
+
+.footer {
+  margin-top: 2rem;
+  border-top-left-radius: 60px;
+  border-top-right-radius: 60px;
+}
+
+.footer p {
+  padding: 0;
+  margin: 0;
+}
+
+.footer h3 {
+  padding-bottom: 15px;
+}
+
+.footer i:nth-child(2) {
+  padding: 0 5px;
+}
+
+.footer .copyright {
+  padding: 1rem 0;
+}
