--- a/css/main.css
+++ b/css/main.css
@@ -182,3 +182,18 @@ img {
 .footer .copyright {
   padding: 1rem 0;
 }
+
+/* filter properties */
+.filter-container {
+  position: relative;
+  width: 300px;
+}
+
+.bg-filter .container {
+  background: linear-gradient(
+      to bottom,
+      rgba(17, 0, 163, 0.623),
+      rgba(85, 4, 95, 0.5)
+    ),
+    url("../images/filter.jpeg") no-repeat center center/cover;
+}
