--- a/css/utilities.css
+++ b/css/utilities.css
@@ -99,6 +99,16 @@ select {
   color: #333;
 }
 
+textarea {
+  resize: none;
+  width: 100%;
+  height: 100px;
+  border-radius: 15px;
+  outline: none;
+  padding: 20px;
+  border: none;
+}
+
 /* BORDERS */
 
 .border-1 {
