get featured properties on index.php, get all properties on properties.php

--- a/css/utilities.css
+++ b/css/utilities.css
@@ -98,6 +98,15 @@ input[type="file"] {
   padding-bottom: 40px;
 }
 
+.checkbox {
+  /* vertical-align: middle; */
+  display: inline;
+}
+
+.checkbox {
+  margin-bottom: 1rem;
+}
+
 select {
   padding: 0 20px;
   color: #333;
